--- a/cms/templates/index.html
+++ b/cms/templates/index.html
@@ -132,9 +132,8 @@ require(["domReady!", "jquery", "jquery.form", "js/index"], function(doc, $) {
                   <span class="tip">${_("The term in which your course will run.")} <strong>${_("Note: This is part of your course URL, so no spaces or special characters are allowed and it cannot be changed.")}</strong></span>
                   <span class="tip tip-error is-hiding"></span>
                 </li>
-                % if settings.FEATURES.get('CREATIVE_COMMONS_LICENSING', False):
-                <li class="field text" id="field-course-license">
-                </li>
+                % if settings.FEATURES.get('CREATIVE_COMMONS_LICENSING', False) and settings.FEATURES.get('DEFAULT_COURSE_LICENSEABLE', False):
+                <li class="field text" id="field-course-license"></li>
                 % endif
               </ol>
 
@@ -177,7 +176,7 @@ require(["domReady!", "jquery", "jquery.form", "js/index"], function(doc, $) {
                     </span>
                     % if settings.FEATURES.get('CREATIVE_COMMONS_LICENSING', False) and course_info['licenseable']:
                     <span class="course-license metadata-item">
-                      <span class="label">${_("Course License:")}</span> <span class="value">${course_info['license'].small_img}</span>
+                      <span class="label">${_("Course License:")}</span> <span class="value">${course_info['license']}</span>
                     </span>
                     % endif
                   </div>
@@ -220,7 +219,7 @@ require(["domReady!", "jquery", "jquery.form", "js/index"], function(doc, $) {
                     </span>
                     % if settings.FEATURES.get('CREATIVE_COMMONS_LICENSING', False) and course_info['licenseable']:
                     <span class="course-license metadata-item">
-                      <span class="label">${_("Course License:")}</span> <span class="value">${course_info['license'].small_img}</span>
+                      <span class="label">${_("Course License:")}</span> <span class="value">${course_info['license']}</span>
                     </span>
                     % endif
                   </div>
@@ -275,7 +274,7 @@ require(["domReady!", "jquery", "jquery.form", "js/index"], function(doc, $) {
                 </span>
                 % if settings.FEATURES.get('CREATIVE_COMMONS_LICENSING', False) and course_info['licenseable']:
                 <span class="course-license metadata-item">
-                  <span class="label">${_("Course License:")}</span> <span class="value">${course_info['license'].small_img}</span>
+                  <span class="label">${_("Course License:")}</span> <span class="value">${course_info['license']}</span>
                 </span>
                 % endif
               </div>
