--- a/lms/templates/video.html
+++ b/lms/templates/video.html
@@ -18,8 +18,8 @@
     data-sources='${sources}'
     data-save-state-url="${ajax_url}"
     data-caption-data-dir="${data_dir}"
-    % if settings.FEATURES.get('CREATIVE_COMMONS_LICENSING', False):
-    data-license="${license.license}"
+    % if settings.FEATURES.get('CREATIVE_COMMONS_LICENSING', False) and licenseable:
+      data-license="${license}"
     % endif
     data-show-captions="${show_captions}"
     data-general-speed="${general_speed}"
@@ -99,10 +99,10 @@
           <a class="nav-skip sr" id="before-transcript_${id}" href="#after-transcript_${id}">${_('Skip to end of transcript.')}</a>
       </article>
 
-      % if settings.FEATURES.get('CREATIVE_COMMONS_LICENSING', False):
-      <div class="license">
-        ${license.html}
-      </div>
+      % if settings.FEATURES.get('CREATIVE_COMMONS_LICENSING', False) and licenseable:
+        <div class="license">
+          ${license}
+        </div>
       % endif
 
       <ol id="transcript-captions" class="subtitles" tabindex="0" role="group" aria-label="${_('Activating an item in this group will spool the video to the corresponding time point. To skip transcript, go to previous item.')}">
