--- a/cms/templates/asset_index.html
+++ b/cms/templates/asset_index.html
@@ -3,7 +3,6 @@
 <%!
   from django.core.urlresolvers import reverse
   from django.utils.translation import ugettext as _
-  from django.conf import settings
 %>
 <%block name="title">${_("Files &amp; Uploads")}</%block>
 <%block name="bodyclass">is-signedin course uploads view-uploads</%block>
@@ -11,7 +10,7 @@
 <%namespace name='static' file='static_content.html'/>
 
 <%block name="header_extras">
-% for template_name in ["asset-library", "asset", "paging-header", "paging-footer", "license-selector"]:
+% for template_name in ["asset-library", "asset", "paging-header", "paging-footer"]:
 <script type="text/template" id="${template_name}-tpl">
     <%static:include path="js/${template_name}.underscore" />
 </script>
@@ -104,16 +103,6 @@
         </form>
     </div>
 </div>
-
-% if settings.FEATURES.get('CREATIVE_COMMONS_LICENSING', False) and context_course.license:
-  <div class="change-license-modal modal">
-      <a href="#" class="close-button"><i class="icon-remove-sign"></i> <span class="sr">${_('close')}</span></a>
-      <div class="modal-body">
-        <h2>${_("Change Asset License")}</h2>
-      </div>
-      <button type='button' class="save-license-button button">${_("Save License")}</button>
-  </div>
-% endif
 
 
 </%block>
